Stage 4 Partial Edit Re-submission

--- a/styles/style.css
+++ b/styles/style.css
@@ -265,7 +265,7 @@
 }
 
 /* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
-.staff__card {
+.staff__cards {
   display: flex;
   max-width: 760px;
   margin: 68px auto;
@@ -430,9 +430,6 @@
 
 .footer__logo {
   margin-right: auto;
-}
-
-.footer__logo-image {
   height: 21px;
   width: 116px;
 }
